--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a href="#"><span>À propos</span></a>
           <a href="#"><span>Contact</span></a>
           <a href="#"><span>Évènements passés</span></a>
-          <a href="javascript:void(0);" class="icon" onclick="editNav()">
+          <a href="javascript:void(0);" class="icon" >
             <i class="fa fa-bars"></i>
           </a>
 
@@ -44,49 +44,46 @@
             aux réservations... Places limitées !
           </p>
 
-          <button class="btn-signup modal-btn">je m'inscris</button>
+          <button class="btn-signup modal-btn" data-modal="modal_inscription">je m'inscris</button>
 
         </div>
 
         <div class="hero-img">
           <img src="./bg_img.jpg" alt="img" />
         </div>
-
-        <button class="btn-signup modal-btn">je m'inscris</button>
-
       </div>
 
-      <div class="bground">
+      <div class="bground" id="modal_inscription">
         <div class="content">
 
-          <span class="close" id="close"></span>
+          <span class="close"></span>
 
           <div class="modal-body">
-            <form id="form" name="reserve" action="index.html" method="get" onsubmit="return validate(event);">
-
+            <form id="form_inscription" name="reserve" action="index.html" method="get">
+              <div class="error_msg"></div>
               <div class="formData">
                 <label>Prénom</label><br>
-                <input class="text-control" type="text" id="first" name="first" minlength="2" required/><br>
+                <input class="text-control" type="text" id="first_name" name="first_name" minlength="2" /><br>
               </div>
 
               <div class="formData">
                 <label>Nom</label><br>
-                <input class="text-control" type="text" id="last" name="last" minlength="2" required/><br>
+                <input class="text-control" type="text" id="last_name" name="last_name" minlength="2" /><br>
               </div>
 
               <div class="formData">
                 <label>E-mail</label><br>
-                <input class="text-control" type="email" id="email" name="email" required/><br>
+                <input class="text-control" type="email" id="email" name="email" /><br>
               </div>
 
               <div class="formData">
                 <label>Date de naissance</label><br>
-                <input class="text-control" type="date" id="birthdate" name="birthdate" required/><br>
+                <input class="text-control" type="date" id="birthdate" name="birthdate" /><br>
               </div>
 
               <div class="formData">
                 <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
-                <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99" required>
+                <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99" >
               </div>
               <p class="text-label">Quelles villes ?</p>
 
