révision du css

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         <div class="hero-img">
           <img src="./bg_img.jpg" alt="img" />
         </div>
+
+        <button class="btn-signup modal-btn" data-modal="modal_inscription">je m'inscris</button>
+
       </div>
 
       <div class="bground" id="modal_inscription">
@@ -60,15 +63,16 @@
 
           <div class="modal-body">
             <form id="form_inscription" name="reserve" action="index.html" method="get">
+             
               <div class="error_msg"></div>
               <div class="formData">
                 <label>Prénom</label><br>
-                <input class="text-control" type="text" id="first_name" name="first_name" minlength="2" /><br>
+                <input class="text-control" type="text" id="first_name" name="first_name" minlength="2"/><br>
               </div>
 
               <div class="formData">
                 <label>Nom</label><br>
-                <input class="text-control" type="text" id="last_name" name="last_name" minlength="2" /><br>
+                <input class="text-control" type="text" id="last_name" name="last_name" minlength="2"/><br>
               </div>
 
               <div class="formData">
