--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
 
                         <div class="form-group">
                             <label>Prénom</label><br>
-                            <input class="text-control" type="text" id="first_name" name="first_name"
-                                minlength="2" /><br>
+                            <input class="text-control" type="text" id="first_name" name="first_name" minlength="2" /><br>
                             <div class="errorMsg">Le champ Prénom est requis</div>
                         </div>
 
@@ -151,7 +150,7 @@
                                 <span class="checkbox-icon"></span>
                                 J'ai lu et accepté les conditions d'utilisation.
                             </label><br>
-                            <div class="errorMsg">Vous devez accepter les consitions d'utilisation</div>   
+                             
                            
                             <input class="checkbox-input" type="checkbox" id="checkbox2" name="checkbox" />
                             <label class="checkbox2-label" for="checkbox2">
