affichage modal de validation

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="modal" id="modal_success_inscription">
             <div class="content">
                 <span class="close"></span>
-                <div class="modal-body">confirmation ok</div>
+                <div class="modal-body-conf">Votre inscription à bien été pris en compte</div>
             </div>
         </div>
 
