gestion des buttons en responsive

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
             <div class="hero-img">
                 <img src="./bg_img.jpg" alt="img" />
             </div>
+            <button class="btn-signup modal-btn" data-modal="modal_inscription">je m'inscris</button>
         </div>
+      
 
 
         <div class="hidden" data-modal="modal_success_inscription"></div>
@@ -74,13 +76,13 @@
                         <div class="form-group">
                             <label>Prénom</label><br>
                             <input class="text-control" type="text" id="first_name" name="first_name" minlength="2" /><br>
-                            <div class="errorMsg">Le champ Prénom est requis</div>
+                            <div class="errorMsg">Le champ Prénom est requis avec 2 lettres minimum</div>
                         </div>
 
                         <div class="form-group">
                             <label>Nom</label><br>
                             <input class="text-control" type="text" id="last_name" name="last_name" minlength="2" /><br>
-                            <div class="errorMsg">Le champ Nom est requis</div>
+                            <div class="errorMsg">Le champ Nom est requis avec 2 lettres minimum</div>
                         </div>
 
                         <div class="form-group">
