regex pour les 2 lettres minimum

--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 
                         <div class="form-group">
                             <label>Prénom</label><br>
-                            <input class="text-control" type="text" id="first_name" name="first_name" minlength="2" /><br>
+                            <input class="text-control" type="text" id="first_name" name="first_name" /><br>
                             <div class="errorMsg">Le champ Prénom est requis avec 2 lettres minimum</div>
                         </div>
 
                         <div class="form-group">
                             <label>Nom</label><br>
-                            <input class="text-control" type="text" id="last_name" name="last_name" minlength="2" /><br>
+                            <input class="text-control" type="text" id="last_name" name="last_name"/><br>
                             <div class="errorMsg">Le champ Nom est requis avec 2 lettres minimum</div>
                         </div>
 
