--- a/index.html
+++ b/index.html
@@ -105,15 +105,13 @@
 
                         <div class="form-group">
                             <p class="text-label">Quelles villes ?</p>
-                            <input class="checkbox-input" type="radio" id="location1" name="location"
-                                value="New York" />
+                            <input class="checkbox-input" type="radio" id="location1" name="location" value="New York" />
                             <label class="checkbox-label" for="location1">
                                 <span class="checkbox-icon"></span>
                                 New York
                             </label>
 
-                            <input class="checkbox-input" type="radio" id="location2" name="location"
-                                value="San Francisco" />
+                            <input class="checkbox-input" type="radio" id="location2" name="location" value="San Francisco" />
                             <label class="checkbox-label" for="location2">
                                 <span class="checkbox-icon"></span>
                                 San Francisco
