--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="#"><span>Évènements passés</span></a>
 
         </div>
-        <a href="javascript:void(0);" class="icon" onclick="editNav()">
+        <a href="javascript:void(0);" class="icon" onclick="topNavToggle()">
             <i class="fa fa-bars"></i>
         </a>
 
