--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         </div>
 
                         <div class="form-group">
-                            <input class="checkbox-input" type="checkbox" id="checkbox1" name="cgu" />
+                            <input class="checkbox-input" type="checkbox" id="checkbox1" name="cgu" checked/>
                             <label class="checkbox2-label" for="checkbox1">
                                 <span class="checkbox-icon"></span>
                                 J'ai lu et accepté les conditions d'utilisation.
